Geolocating map now renders through boba_maps route

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,19 @@
 <html>
 <head>
   <title>Boba Shops!</title>
+  <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
 </head>
 
 <body>
@@ -9,7 +22,7 @@
   <hr>
 
 <!--   {% block flash_message %} -->
-	  {% with messages = get_flashed_messages() %}
+	  <!-- {% with messages = get_flashed_messages() %}
 	     {% if messages %}
 	        <ul>
 	           {% for message in messages %}
@@ -17,10 +30,9 @@
 	           {% endfor %}
 	        </ul>
 	     {% endif %}
-	  {% endwith %}
+	  {% endwith %} -->
    <!-- {% endblock %} -->
 
   {% block content %} put your content here {% endblock %}
-
 </body>
 </html>
